--- a/package.json
+++ b/package.json
@@ -6,15 +6,13 @@
         "dev": "vite"
     },
     "devDependencies": {
-        "autoprefixer": "^10.4.20",
         "axios": "^1.7.4",
         "concurrently": "^9.0.1",
         "laravel-vite-plugin": "^1.2.0",
-        "postcss": "^8.4.47",
-        "tailwindcss": "^3.4.17",
         "vite": "^6.0.11"
     },
     "dependencies": {
-        "@tailwindcss/vite": "^4.0.6"
+        "@tailwindcss/vite": "^4.0.6",
+        "tailwindcss": "^4.0.6"
     }
 }
